syntax = "proto3";

package resource_management_control;

service Lecture {
	rpc CreateLecture (CreateLectureRequest) returns (CreateLectureResponse);
	rpc GetLecture (GetLectureRequest) returns (GetLectureResponse);
	rpc GetAllLectures (GetAllLecturesRequest) returns (GetAllLecturesResponse);
}

message CreateLectureRequest {
	uint32 courseId = 1;
	string name = 2;
	string url = 3;
}
message CreateLectureResponse {
}

message GetLectureRequest {
	uint32 lectureId = 1;
}
message GetLectureResponse {
	uint32 lectureId = 1;
	string name = 2;
	string url = 3;
}

message GetAllLecturesRequest {
	
}
message GetAllLecturesResponse {
	uint32 lectureId = 1;
	string name = 2;
	string url = 3;
}
